# restaurante_back

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sql_models.sql
.github/workflows/: docker.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_complete_schema.py  0003_rbac.py  0004_kitchen_roles_and_ready_rollup.py  0005_recipe_details.py  0006_ticket_station_unique.py  0007_station_task_lists.py  0008_delivery_settings_and_route_map_data.py  0009_order_delivery_timestamps_notes.py  0010_ingredient_category.py  0011_shift_scheduling.py
scripts/: seed.py  seed_demo.py
src/restaurante/: main.py
src/restaurante/shared/: config.py  database.py  models_registry.py
tests/: conftest.py
tests/modules/audit/: test_audit_api.py
tests/modules/cash/: test_cash_api.py
tests/modules/catalog/: test_catalog_api.py
tests/modules/customers/: test_customers_api.py
tests/modules/delivery/: test_delivery_api.py  test_delivery_map_api.py
tests/modules/finance/: test_finance_api.py
tests/modules/identity/: test_auth_api.py  test_branches_api.py  test_login_use_case.py  test_provision_user_api.py  test_rbac.py
tests/modules/inventory/: test_inventory_api.py
tests/modules/kitchen/: test_kitchen_api.py  test_kitchen_events.py  test_kitchen_roles_and_rollup.py  test_kitchen_task_lists.py
tests/modules/menu/: test_menu_api.py  test_menu_variants_api.py
tests/modules/orders/: test_orders_api.py  (+2 more)
tests/shared/: test_audit.py  test_cache.py  test_config.py  test_tenancy_branch.py
(+174 files in other folders)
