[tool.poetry]
name = "restaurante-app"
version = "0.1.0"
description = "SaaS multitenant de gestión de restaurantes (FastAPI, hexagonal)"
authors = ["Nelson Borrego <smw5707@gmail.com>"]
readme = "README.md"
packages = [{ include = "restaurante", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.3.0"
pyjwt = "^2.8.0"
pwdlib = { extras = ["argon2"], version = "^0.2.0" }
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates these files with long create_table/index lines.
"migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["restaurante"]
strict = true
